--- a/style.css
+++ b/style.css
@@ -29,13 +29,12 @@ body{
     height: 100%;
 }
 
-
 #search-bar{
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 20%;
-    background-color: #eee;
+    background-color: snow;
     border: 1px solid rgb(219,219,219);
     border-radius: 5px;
     width: 200px;
@@ -46,15 +45,21 @@ body{
 }
 #search-bar input{
     color: rgba(0,0,0,0.5);
+    width: 200px;
     height: 90%;
     outline: none;
     background: none;
     border: none;
+    margin-left: -16px;
+    text-align: center;
 }
 #search-icon{
-    height: 80%;
+    height: 60%;
 }
-
+#search-bar input:focus{
+    padding-left: 20px;
+    text-align: left;
+}
 
 #header-icons{
     display:flex;
@@ -72,15 +77,16 @@ body{
 .header-icons-img, #header-user-profile-pic{
     height:90%;
 }
+/* ------------------------------*/
 
-/* -------------------- post */
+
+/* -------------------- content */
 #main-content{
     position: absolute;
     align-self: center;
     width: 900px;
     height: 550px;
     margin-top: 5%;
-    /*margin: 5% 5%;*/
     display: flex;
     align-items: center;
 }
