--- a/style.css
+++ b/style.css
@@ -10,30 +10,41 @@ body{
     justify-content: center;
     background-color: snow;
 }
+a{
+    color:black;
+    text-decoration:none;
+}
+a:visited{
+    color:black;
+    text-decoration:none;
+}
 
 /* -------------------- header */
 #main-header{
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
     height: 54px;
     background-color:white;
     border-bottom: 1px solid rgb(219,219,219);
 }
 #link-logo-header{
-    margin-left: 15%;
-    width: 10%;
-    height: 70%;
+    margin-top: 5px;
+    margin-left: 10px;
+    width: 103px;
+    height: 29px;
 }
 #logo-header{
-    height: 100%;
+    width: 103px;
 }
 
 #search-bar{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 20%;
+    margin: 0px 210px;
+    
     background-color: snow;
     border: 1px solid rgb(219,219,219);
     border-radius: 5px;
@@ -50,14 +61,15 @@ body{
     outline: none;
     background: none;
     border: none;
-    margin-left: -16px;
+    margin-left: -21px;
     text-align: center;
 }
 #search-icon{
+    margin-left: 5px;
     height: 60%;
 }
 #search-bar input:focus{
-    padding-left: 20px;
+    padding-left: 25px;
     text-align: left;
 }
 
@@ -65,28 +77,32 @@ body{
     display:flex;
     align-content: center;
     justify-content: center;
-    margin-left: 15%;
+    width: 200px;
     height: 50%;
-    background-color: red;
+
 }
 .header-icons-link{
     width: 20px;
     background:none;
-    margin-right: 5%;
+    margin-right: 10%;
 }
 .header-icons-img, #header-user-profile-pic{
     height:90%;
 }
 /* ------------------------------*/
 
-
+main{
+    margin-top: 55px;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 /* -------------------- content */
 #main-content{
-    position: absolute;
-    align-self: center;
     width: 900px;
     height: 550px;
-    margin-top: 5%;
+    margin-top: 30px;
     display: flex;
     align-items: center;
 }
