--- a/style.css
+++ b/style.css
@@ -113,11 +113,6 @@ main{
     display: flex;
     justify-content: center;
 }
-@-moz-document url-prefix() {   /* essa parte serve somente     */
-    main{                       /* pra corrigir um erro de      */
-        margin-left: -100%;     /* formatação que acontecia     */
-    }                           /* apenas no navegador firefox  */
-}
 
 /* -------------------- content */
 #main-content{
@@ -131,6 +126,7 @@ main{
 #post{
     width: 550px;
     height: 550px;
+    background-color: white;
 }
 .post-pic{
     width: 100%;
@@ -143,11 +139,12 @@ main{
     background-color: white;
     border: 1px solid rgb(219,219,219);
     border-radius: 1%;
-    overflow: hidden;
 }
 /* side-bar-header */
 #side-bar-header{
-    display:flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     height: 54px;
     background: none;
@@ -158,6 +155,12 @@ main{
     border: 1px solid rgb(219,219,219);
     border-radius: 100%;
 }
+#side-bar-header-left-icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
 #side-bar-header .profile-pic{
     margin-left: 20px;
     margin-right: 17px;
@@ -165,9 +168,10 @@ main{
 #dot-icon{
     margin: 0px 5px;
     width: 7px;
+    height: 7px;
 }
 #plus-icon{
-    margin-left: 120px;
+    margin-right: 10px;
     width: 15px;
 }
 #plus-icon:hover{
@@ -182,20 +186,20 @@ main{
     border-bottom: 5px solid white;
     display: flex;
     justify-content: center;
-    scrollbar-width: none;
 }
 #post-description{
     padding-top: 5px;
-    width: 70%;
+    width: 78%;
     margin-left: 5%;
 }
 #post-description p a{
     margin-right: 5px;
 }
 
-#post-description-and-comments-area::-webkit-scrollbar {
-    display: none;
-}  /* infelizmente não consegui esconder a barra no firefox*/ 
+#post-description-and-comments-area::-webkit-scrollbar { 
+    display: none;       /* infelizmente não consegui*/
+}                        /* a barra no firefox */ 
+  
 
 /* side-bar-footer */
 #side-bar-footer{
@@ -204,10 +208,20 @@ main{
 }
 #side-bar-footer-icons{
     display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     height: 35px;
 }
-#side-bar-footer-icons img{
+#side-bar-footer-left-icons{
+    display: flex;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+}
+#side-bar-footer-left-icons img{
     margin: 15px 7px;
     height: 70%;
     cursor: pointer;
@@ -215,8 +229,7 @@ main{
 #side-bar-footer-icons img:first-child{
     margin-left: 20px;
 }
-#side-bar-footer-icons img:last-child{
-    margin-left: 155px;
+#save-icon{
     height: 55px
 }
 /* side-bar-footer likes area*/
@@ -233,8 +246,11 @@ main{
     height: 20px;
     margin-left: 15px;
 }
-#side-bar-footer-likes .date{
-    width: 100%;
+/* date of post*/
+#date-of-post{
+    margin-top: 2px;
+    margin-left: 20px;
+    cursor: pointer;
 }
 /* side-bar-footer comment input area*/
 #side-bar-footer-comment{
@@ -245,7 +261,6 @@ main{
     height: 49px;
 }
 #comment-input{
-
     border: none;
     outline: none;
     background: none;
@@ -255,12 +270,6 @@ main{
 }
 #side-bar-footer-comment p{
     color:rgb(183,225,253);
-    cursor: pointer;
-}
-/* date of post*/
-#date-of-post{
-    margin-top: 2px;
-    margin-left: 20px;
     cursor: pointer;
 }
 
